--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "english_french_translation_app"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 ibm-watson = "^6.1.0"
+flask = "^2.2.2"
+python-dotenv = "^0.21.0"
 
 
 [build-system]
